Fix broken Source Code Pro font coloring on Firefox
Loaded newer Source Code Pro TTF files from Google Fonts and removed other formats to prevent them from loading, as they also couldn't be styled with the CSS color property in Firefox.

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -146,11 +146,7 @@
   font-weight: 200;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-ExtraLight.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-ExtraLight.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-ExtraLight.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-ExtraLight.otf') format('opentype'),
-       url('../assets/fonts/TTF/SourceCodePro-ExtraLight.ttf') format('truetype');
+  src: url('../assets/fonts/TTF/SourceCodePro-ExtraLight.ttf') format('truetype');
 }
 
 @font-face{
@@ -158,11 +154,7 @@
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-Light.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-Light.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-Light.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-Light.otf') format('opentype'),
-       url('../assets/fonts/TTF/SourceCodePro-Light.ttf') format('truetype');
+  src: url('../assets/fonts/TTF/SourceCodePro-Light.ttf') format('truetype');
 }
 
 @font-face{
@@ -170,11 +162,7 @@
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-Regular.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-Regular.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-Regular.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-Regular.otf') format('opentype'),
-       url('../assets/fonts/TTF/SourceCodePro-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/TTF/SourceCodePro-Regular.ttf') format('truetype');
 }
 
 @font-face{
@@ -182,11 +170,7 @@
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-Medium.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-Medium.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-Medium.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-Medium.otf') format('opentype'),
-       url('../assets/fonts/TTF/SourceCodePro-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/TTF/SourceCodePro-Medium.ttf') format('truetype');
 }
 
 @font-face{
@@ -194,10 +178,7 @@
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-Semibold.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-Semibold.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-Semibold.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-Semibold.otf') format('opentype'),
+  src: 
        url('../assets/fonts/TTF/SourceCodePro-Semibold.ttf') format('truetype');
 }
 
@@ -206,11 +187,7 @@
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-Bold.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-Bold.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-Bold.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-Bold.otf') format('opentype'),
-       url('../assets/fonts/TTF/SourceCodePro-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/TTF/SourceCodePro-Bold.ttf') format('truetype');
 }
 
 @font-face{
@@ -218,9 +195,5 @@
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
-  src: url('../assets/fonts/EOT/SourceCodePro-Black.eot') format('embedded-opentype'),
-       url('../assets/fonts/WOFF2/TTF/SourceCodePro-Black.ttf.woff2') format('woff2'),
-       url('../assets/fonts/WOFF/OTF/SourceCodePro-Black.otf.woff') format('woff'),
-       url('../assets/fonts/OTF/SourceCodePro-Black.otf') format('opentype'),
-       url('../assets/fonts/TTF/SourceCodePro-Black.ttf') format('truetype');
+  src: url('../assets/fonts/TTF/SourceCodePro-Black.ttf') format('truetype');
 }
